Remove workspace from show-summary task
workspace was removed from the pipeline when creating
tekton-bundle-builder-oci-ta pipeline.

workspace is optional for task summary, so this removal just works.

--- a/pipelines/tekton-bundle-builder-oci-ta/tekton-bundle-builder-oci-ta.yaml
+++ b/pipelines/tekton-bundle-builder-oci-ta/tekton-bundle-builder-oci-ta.yaml
@@ -22,9 +22,7 @@ spec:
     taskRef:
       name: summary
       version: "0.2"
-    workspaces:
-    - name: workspace
-      workspace: workspace
+    workspaces: []
   params:
   - description: Source Repository URL
     name: git-url
