--- a/pipelines/tekton-bundle-builder-oci-ta/patch.yaml
+++ b/pipelines/tekton-bundle-builder-oci-ta/patch.yaml
@@ -91,3 +91,7 @@
     value: $(tasks.prefetch-dependencies.results.CACHI2_ARTIFACT)
 - op: remove
   path: /spec/tasks/6/workspaces/0
+
+# summary
+- op: remove
+  path: /spec/finally/0/workspaces/0
