feat: git-clone: Add optional targetBranch merging
*   Introduced `mergeTargetBranch` parameter to optionally enable
    merging a target branch into the checked-out revision.
*   Added `targetBranch` parameter to specify the branch to be merged
    (defaults to `main`).
*   Included a new result `merged_sha` to output the commit SHA after a
    successful merge.
*   This allows workflows to test or build the state of the code as if
    the target branch had been merged into the specified revision.

Signed-off-by: Chmouel Boudjnah <chmouel@redhat.com>

--- a/task/git-clone/0.1/git-clone.yaml
+++ b/task/git-clone/0.1/git-clone.yaml
@@ -72,7 +72,6 @@ spec:
   - default: ""
     description: Deprecated. Has no effect. Will be removed in the future.
     name: gitInitImage
-    type: string
   - default: /tekton/home
     description: |
       Absolute path to the user's home directory. Set this explicitly if you are running the image as a non-root user.
@@ -95,6 +94,14 @@ spec:
     type: string
     description: The name of the key in the ConfigMap that contains the CA bundle data.
     default: ca-bundle.crt
+  - name: mergeTargetBranch
+    description: Set to "true" to merge the targetBranch into the checked-out revision.
+    type: string
+    default: "false"
+  - name: targetBranch
+    description: The target branch to merge into the revision (if mergeTargetBranch is true).
+    type: string
+    default: "main"
   results:
   - description: The precise commit SHA that was fetched by this Task.
     name: commit
@@ -108,6 +115,8 @@ spec:
     name: CHAINS-GIT_URL
   - description: The precise commit SHA that was fetched by this Task. This result uses Chains type hinting to include in the provenance.
     name: CHAINS-GIT_COMMIT
+  - name: merged_sha
+    description: The SHA of the commit after merging the target branch (if the param mergeTargetBranch is true).
   steps:
   - name: clone
     env:
@@ -147,6 +156,10 @@ spec:
       value: $(params.fetchTags)
     - name: PARAM_GIT_INIT_IMAGE
       value: $(params.gitInitImage)
+    - name: PARAM_MERGE_TARGET_BRANCH
+      value: $(params.mergeTargetBranch)
+    - name: PARAM_TARGET_BRANCH
+      value: $(params.targetBranch)
     - name: WORKSPACE_OUTPUT_PATH
       value: $(workspaces.output.path)
     - name: WORKSPACE_SSH_DIRECTORY_BOUND
@@ -247,6 +260,41 @@ spec:
       EXIT_CODE="$?"
       if [ "${EXIT_CODE}" != 0 ] ; then
         exit "${EXIT_CODE}"
+      fi
+      if [ "${PARAM_MERGE_TARGET_BRANCH}" = "true" ]; then
+        echo "Merge option enabled. Attempting to merge target branch '${PARAM_TARGET_BRANCH}' into HEAD (${RESULT_SHA})."
+        echo "Fetching target branch '${PARAM_TARGET_BRANCH}'..."
+        git fetch origin "${PARAM_TARGET_BRANCH}"
+        FETCH_EXIT_CODE="$?"
+        if [ "${FETCH_EXIT_CODE}" != "0" ]; then
+          echo "ERROR: Failed to fetch target branch '${PARAM_TARGET_BRANCH}'." >&2
+          exit "${FETCH_EXIT_CODE}"
+        fi
+        echo "Merging origin/${PARAM_TARGET_BRANCH} into current HEAD..."
+        git config --global user.email "tekton-git-clone@tekton.dev"
+        git config --global user.name "Tekton Git Clone Task"
+        git merge "origin/${PARAM_TARGET_BRANCH}" --no-commit --no-ff --allow-unrelated-histories
+        MERGE_CHECK_EXIT_CODE="$?"
+        if [ "${MERGE_CHECK_EXIT_CODE}" != "0" ] ; then
+          echo "ERROR: Merge conflict detected or merge failed before commit." >&2
+          echo "--- Git Status ---"
+          git status
+          echo "------------------"
+          exit "${MERGE_CHECK_EXIT_CODE}"
+        else
+          echo "Merge successful (no conflicts found), committing..."
+          git commit -m "Merge branch '${PARAM_TARGET_BRANCH}' into ${RESULT_SHA}"
+          COMMIT_EXIT_CODE="$?"
+          if [ "${COMMIT_EXIT_CODE}" != "0" ]; then
+            echo "ERROR: Failed to commit merge." >&2
+            exit "${COMMIT_EXIT_CODE}"
+          fi
+          MERGED_SHA=$(git rev-parse HEAD)
+          echo "New HEAD after merge: ${MERGED_SHA}"
+          echo "${MERGED_SHA}" > "$(results.merged_sha.path)"
+        fi
+      else
+        echo "Merge option disabled. Using checked-out revision ${RESULT_SHA} directly."
       fi
       printf "%s" "${RESULT_SHA}" > "$(results.commit.path)"
       printf "%s" "${RESULT_SHA}" > "$(results.CHAINS-GIT_COMMIT.path)"
