--- a/task/git-clone-oci-ta/0.1/git-clone-oci-ta.yaml
+++ b/task/git-clone-oci-ta/0.1/git-clone-oci-ta.yaml
@@ -46,6 +46,11 @@ spec:
       description: HTTPS proxy server for SSL requests.
       type: string
       default: ""
+    - name: mergeTargetBranch
+      description: Set to "true" to merge the targetBranch into the checked-out
+        revision.
+      type: string
+      default: "false"
     - name: noProxy
       description: Opt out of proxying HTTP/HTTPS requests.
       type: string
@@ -85,6 +90,11 @@ spec:
       description: Initialize and fetch git submodules.
       type: string
       default: "true"
+    - name: targetBranch
+      description: The target branch to merge into the revision (if mergeTargetBranch
+        is true).
+      type: string
+      default: main
     - name: url
       description: Repository URL to clone from.
       type: string
@@ -113,6 +123,9 @@ spec:
       description: The precise commit SHA that was fetched by this Task.
     - name: commit-timestamp
       description: The commit timestamp of the checkout
+    - name: merged_sha
+      description: The SHA of the commit after merging the target branch (if
+        the param mergeTargetBranch is true).
     - name: short-commit
       description: The commit SHA that was fetched by this Task limited to
         params.shortCommitLength number of characters
@@ -184,6 +197,10 @@ spec:
           value: $(params.userHome)
         - name: PARAM_FETCH_TAGS
           value: $(params.fetchTags)
+        - name: PARAM_MERGE_TARGET_BRANCH
+          value: $(params.mergeTargetBranch)
+        - name: PARAM_TARGET_BRANCH
+          value: $(params.targetBranch)
         - name: WORKSPACE_SSH_DIRECTORY_BOUND
           value: $(workspaces.ssh-directory.bound)
         - name: WORKSPACE_SSH_DIRECTORY_PATH
@@ -251,6 +268,41 @@ spec:
         EXIT_CODE="$?"
         if [ "${EXIT_CODE}" != 0 ]; then
           exit "${EXIT_CODE}"
+        fi
+        if [ "${PARAM_MERGE_TARGET_BRANCH}" = "true" ]; then
+          echo "Merge option enabled. Attempting to merge target branch '${PARAM_TARGET_BRANCH}' into HEAD (${RESULT_SHA})."
+          echo "Fetching target branch '${PARAM_TARGET_BRANCH}'..."
+          git fetch origin "${PARAM_TARGET_BRANCH}"
+          FETCH_EXIT_CODE="$?"
+          if [ "${FETCH_EXIT_CODE}" != "0" ]; then
+            echo "ERROR: Failed to fetch target branch '${PARAM_TARGET_BRANCH}'." >&2
+            exit "${FETCH_EXIT_CODE}"
+          fi
+          echo "Merging origin/${PARAM_TARGET_BRANCH} into current HEAD..."
+          git config --global user.email "tekton-git-clone@tekton.dev"
+          git config --global user.name "Tekton Git Clone Task"
+          git merge "origin/${PARAM_TARGET_BRANCH}" --no-commit --no-ff --allow-unrelated-histories
+          MERGE_CHECK_EXIT_CODE="$?"
+          if [ "${MERGE_CHECK_EXIT_CODE}" != "0" ]; then
+            echo "ERROR: Merge conflict detected or merge failed before commit." >&2
+            echo "--- Git Status ---"
+            git status
+            echo "------------------"
+            exit "${MERGE_CHECK_EXIT_CODE}"
+          else
+            echo "Merge successful (no conflicts found), committing..."
+            git commit -m "Merge branch '${PARAM_TARGET_BRANCH}' into ${RESULT_SHA}"
+            COMMIT_EXIT_CODE="$?"
+            if [ "${COMMIT_EXIT_CODE}" != "0" ]; then
+              echo "ERROR: Failed to commit merge." >&2
+              exit "${COMMIT_EXIT_CODE}"
+            fi
+            MERGED_SHA=$(git rev-parse HEAD)
+            echo "New HEAD after merge: ${MERGED_SHA}"
+            echo "${MERGED_SHA}" >"$(results.merged_sha.path)"
+          fi
+        else
+          echo "Merge option disabled. Using checked-out revision ${RESULT_SHA} directly."
         fi
         printf "%s" "${RESULT_SHA}" >"$(results.commit.path)"
         printf "%s" "${RESULT_SHA}" >"$(results.CHAINS-GIT_COMMIT.path)"
