buildah-remote: partially fix ssh shell quoting
When passing a variable to SSH, it gets evaluated by two shells: the
shell that's currently running and the shell on the remote server. What
does this mean?

If you run this example locally:

    message='hello there'
    printf '%s.' $message

    # result: hello.there.

The message breaks into two arguments, because it's not properly quoted.
Fix by adding quotes:

    message='hello there'
    printf '%s.' "$message"

    # result: hello there.

But then, when you add ssh into the mix:

    message='hello there'
    ssh "$some_host" printf '%s.' "$message"

    # result: hello.there.

The message broke again. That's because ssh received a list of arguments
already expanded by your shell and concatenated them together, resulting
in a command that may look something like this:

    printf %s. hello there

When passing arbitrary strings to ssh, they need two layers of quoting.
The result of variable expansion on the client side must be a string
that, when evaluated by a shell again, expands to the original value of
the variable. In bash, this is achieved with the ${var@Q} operator; see
the Bash manual [1] (refer to the "parameter@operator" section).

Apply the @Q operator when passing the $@ argument array to ssh. This is
the part of the ssh command most likely to contain spaces or other
characters that need escaping. The rest of the ssh command is still
broken, but is less likely to be affected.

[1]: https://www.gnu.org/software/bash/manual/html_node/Shell-Parameter-Expansion.html

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/task/buildah-remote-oci-ta/0.1/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.1/buildah-remote-oci-ta.yaml
@@ -502,7 +502,7 @@ spec:
           -v "$BUILD_DIR/results/:/tekton/results:Z" \
           -v "$BUILD_DIR/scripts:/scripts:Z" \
           "${PRIVILEGED_NESTED_FLAGS[@]}" \
-          --user=0 "${PODMAN_NVIDIA_ARGS[@]}" --rm "$BUILDER_IMAGE" /scripts/script-build.sh "$@"
+          --user=0 "${PODMAN_NVIDIA_ARGS[@]}" --rm "$BUILDER_IMAGE" /scripts/script-build.sh "${@@Q}"
         echo "[$(date --utc -Ins)] Rsync back"
         rsync -ra "$SSH_HOST:$BUILD_DIR/volumes/shared/" /shared/
         rsync -ra "$SSH_HOST:$BUILD_DIR/volumes/workdir/" /var/workdir/
