--- a/task/buildah-min/0.4/patch.yaml
+++ b/task/buildah-min/0.4/patch.yaml
@@ -11,7 +11,7 @@
 - op: replace
   path: /spec/steps/0/computeResources/requests/cpu
   value: 100m
-# icm, push, and sbom-syft-generate steps
+# push, and sbom-syft-generate steps
 - op: replace
   path: /spec/stepTemplate/computeResources/limits/memory
   value: 2Gi
@@ -23,21 +23,21 @@
   value: 100m
 # prepare-sboms step
 - op: replace
-  path: /spec/steps/4/computeResources/limits/memory
+  path: /spec/steps/3/computeResources/limits/memory
   value: 256Mi
 - op: replace
-  path: /spec/steps/4/computeResources/requests/memory
+  path: /spec/steps/3/computeResources/requests/memory
   value: 128Mi
 - op: replace
-  path: /spec/steps/4/computeResources/requests/cpu
+  path: /spec/steps/3/computeResources/requests/cpu
   value: 10m
 # upload-sbom step
 - op: replace
-  path: /spec/steps/5/computeResources/limits/memory
+  path: /spec/steps/4/computeResources/limits/memory
   value: 2Gi
 - op: replace
-  path: /spec/steps/5/computeResources/requests/memory
+  path: /spec/steps/4/computeResources/requests/memory
   value: 512Mi
 - op: replace
-  path: /spec/steps/5/computeResources/requests/cpu
+  path: /spec/steps/4/computeResources/requests/cpu
   value: 100m
