Add SBOM_DIGEST result to build-index-image task
The SBOM digest is exposed in the task result to be later used by the
Konflux UI to redirect user to SBOM uploaded to Atlas UI.

This is done because a new version of Atlas no longer supports URL
templates based on custom fields. The SBOM digest is now used as primary
identifier.

JIRA: ISV-5734

Signed-off-by: Ales Raszka <araszka@redhat.com>

--- a/task/build-image-index/0.1/build-image-index.yaml
+++ b/task/build-image-index/0.1/build-image-index.yaml
@@ -54,6 +54,9 @@ spec:
   - name: SBOM_BLOB_URL
     description: Reference of SBOM blob digest to enable digest-based verification from provenance
     type: string
+  - name: SBOM_DIGEST
+    description: A reference to the digest of the SBOM blob
+    type: string
   volumes:
     - name: shared-dir
       emptyDir: {}
@@ -238,6 +241,9 @@ spec:
       sbom_digest="$(sha256sum "$SBOM_RESULT_FILE" | cut -d' ' -f1)"
       # The SBOM_BLOB_URL is created by `cosign attach sbom`.
       echo -n "${sbom_repo}@sha256:${sbom_digest}" | tee "$(results.SBOM_BLOB_URL.path)"
+
+      # Expose the SBOM digest as result to find the SBOM in Atlas.
+      echo -n "${sbom_digest}" | tee "$(results.SBOM_DIGEST.path)"
     computeResources:
       limits:
         memory: 512Mi
