--- a/task/build-image-manifest/0.1/build-image-manifest.yaml
+++ b/task/build-image-manifest/0.1/build-image-manifest.yaml
@@ -63,6 +63,9 @@ spec:
       from provenance
     name: SBOM_BLOB_URL
     type: string
+  - description: A reference to the digest of the SBOM blob
+    name: SBOM_DIGEST
+    type: string
   stepTemplate:
     env:
     - name: BUILDAH_FORMAT
@@ -246,6 +249,9 @@ spec:
       sbom_digest="$(sha256sum "$SBOM_RESULT_FILE" | cut -d' ' -f1)"
       # The SBOM_BLOB_URL is created by `cosign attach sbom`.
       echo -n "${sbom_repo}@sha256:${sbom_digest}" | tee "$(results.SBOM_BLOB_URL.path)"
+
+      # Expose the SBOM digest as result to find the SBOM in Atlas.
+      echo -n "${sbom_digest}" | tee "$(results.SBOM_DIGEST.path)"
   volumes:
   - emptyDir: {}
     name: shared-dir
