--- a/task/buildah/0.4/buildah.yaml
+++ b/task/buildah/0.4/buildah.yaml
@@ -144,6 +144,9 @@ spec:
   - name: SBOM_BLOB_URL
     description: Reference of SBOM blob digest to enable digest-based verification from provenance
     type: string
+  - name: SBOM_DIGEST
+    description: A reference to the digest of the SBOM blob
+    type: string
   stepTemplate:
     computeResources:
       limits:
@@ -789,6 +792,9 @@ spec:
       sbom_digest="$(sha256sum sbom.json | cut -d' ' -f1)"
       # The SBOM_BLOB_URL is created by `cosign attach sbom`.
       echo -n "${sbom_repo}@sha256:${sbom_digest}" | tee "$(results.SBOM_BLOB_URL.path)"
+
+      # Expose the SBOM digest as result to find the SBOM in Atlas.
+      echo -n "${sbom_digest}" | tee "$(results.SBOM_DIGEST.path)"
 
       echo
       echo "[$(date --utc -Ins)] End upload-sbom"
